Introduced more complex structureto reflect real world scanrios better

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -10,7 +10,7 @@ import Mastodon from "./icons/Mastodon.astro";
     <a href="/"><AstroPWA size="64" /></a>
   </div>
   <div class="internal-links">
-    <HeaderLink href="/recipe">Recipe</HeaderLink>
+    <HeaderLink href="/catalog">Recipes</HeaderLink>
     <HeaderLink href="/journal">Journal</HeaderLink>
   </div>
   <div class="social-links">
