--- a/src/layouts/JournalLayout.astro
+++ b/src/layouts/JournalLayout.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "./Layout.astro";
-import { localeDate } from "../utils/locale-date";
+import { localeDate } from "@/utils/locale-date";
 
 const {
   frontmatter: { date },
