--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
+import Nav from "@/components/Nav.astro";
 import "@picocss/pico";
-import packageJson from "../../package.json";
-import Nav from "../components/Nav.astro";
+import packageJson from "package.json";
 import { pwaInfo } from "virtual:pwa-info";
 
 interface Props {
