--- a/src/pages/journal/index.astro
+++ b/src/pages/journal/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import { localeDate } from "../../utils/locale-date";
+import Layout from "@/layouts/Layout.astro";
+import { localeDate } from "@/utils/locale-date";
 const posts = await Astro.glob("./*.mdx");
 ---
 
