--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,5 +4,5 @@ import Layout from "@/layouts/Layout.astro";
 
 <Layout title="404">
   <h1>404</h1>
-  <p>Page not found</p>
+  <p>Ooops, page not found</p>
 </Layout>
