--- a/src/pages/catalog/offline.astro
+++ b/src/pages/catalog/offline.astro
@@ -1,8 +1,12 @@
 ---
 import Layout from "@/layouts/Layout.astro";
+
+/**
+ * Offline functionality specific for the catalog page
+ */
 ---
 
 <Layout>
-  <h1>Recipe Catalog</h1>
+  <h1>Catalog</h1>
   <p>Browse (some) recipes offline</p>
 </Layout>
