--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -10,7 +10,7 @@ import Mastodon from "./icons/Mastodon.astro";
     <a href="/"><AstroPWA size="64" /></a>
   </div>
   <div class="internal-links">
-    <HeaderLink href="/catalog">Recipes</HeaderLink>
+    <HeaderLink href="/catalog">Catalog</HeaderLink>
     <HeaderLink href="/journal">Journal</HeaderLink>
   </div>
   <div class="social-links">
@@ -18,7 +18,10 @@ import Mastodon from "./icons/Mastodon.astro";
       <span class="sr-only">Follow Christian on Mastodon</span>
       <Mastodon />
     </a>
-    <a href="https://github.com/christian-hackyourshack/astro-pwa-recipe" target="_blank">
+    <a
+      href="https://github.com/christian-hackyourshack/astro-pwa-recipe"
+      target="_blank"
+    >
       <span class="sr-only">GitHub repo for Astro PWA recipe</span>
       <Github />
     </a>
