--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ import RegisterSW from "@/pwa/RegisterSW.astro";
 import WebManifestLink from "@/pwa/WebManifestLink.astro";
 import "@picocss/pico";
 import packageJson from "package.json";
+import { ViewTransitions } from "astro:transitions";
 
 interface Props {
   title?: string;
@@ -33,6 +34,7 @@ const { description = packageJson.description } = Astro.props;
     <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF" />
     <link rel="apple-touch-icon" href="/pwa-192x192.png" />
     <WebManifestLink />
+    <ViewTransitions />
   </head>
   <body>
     <Nav />
@@ -48,14 +50,15 @@ const { description = packageJson.description } = Astro.props;
         height: 1px;
         width: 1px;
         overflow: hidden;
-        /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
         clip: rect(1px 1px 1px 1px);
-        /* maybe deprecated but we need to support legacy browsers */
         clip: rect(1px, 1px, 1px, 1px);
-        /* modern browsers, clip-path works inwards from each corner */
         clip-path: inset(50%);
-        /* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
         white-space: nowrap;
+      }
+
+      a {
+        color: white;
+        text-decoration: underline dotted darkorange;
       }
     </style>
     <RegisterSW />
