--- a/src/pages/cookbook/offline.astro
+++ b/src/pages/cookbook/offline.astro
@@ -2,11 +2,11 @@
 import Layout from "@/layouts/Layout.astro";
 
 /**
- * Offline functionality specific for the catalog page
+ * Offline functionality specific for the cookbook page
  */
 ---
 
 <Layout>
-  <h1>Catalog</h1>
+  <h1>Cookbook</h1>
   <p>Browse (some) recipes offline</p>
 </Layout>
