--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,5 +1,5 @@
 ---
-import HeaderLink from "./NavLink.astro";
+import NavLink from "./NavLink.astro";
 import AstroPWA from "./icons/AstroPWA.astro";
 import Github from "./icons/Github.astro";
 import Mastodon from "./icons/Mastodon.astro";
@@ -10,8 +10,8 @@ import Mastodon from "./icons/Mastodon.astro";
     <a href="/"><AstroPWA size="64" /></a>
   </div>
   <div class="internal-links">
-    <HeaderLink href="/catalog">Catalog</HeaderLink>
-    <HeaderLink href="/journal">Journal</HeaderLink>
+    <NavLink href="/cookbook">Cookbook</NavLink>
+    <NavLink href="/journal">Journal</NavLink>
   </div>
   <div class="social-links">
     <a href="https://mastodon.online/@no_fuss" target="_blank">
