WIP: Download button

--- a/src/pages/cookbook/index.astro
+++ b/src/pages/cookbook/index.astro
@@ -82,6 +82,8 @@ const randomRecipe = recipes.filter((r) => r.slug !== "generate-sw")[
     flex-wrap: wrap;
     gap: 16px;
     li {
+      display: flex;
+      width: 100%;
       list-style: none;
     }
   }
