--- a/src/components/RecipeCard.astro
+++ b/src/components/RecipeCard.astro
@@ -1,6 +1,7 @@
 ---
 import type { Recipe } from "@/content/config";
 import CategoryPill from "./CategoryPill.astro";
+import { DownloadRecipe } from "@/islands";
 
 interface Props {
   recipe: Recipe;
@@ -8,9 +9,10 @@ interface Props {
 }
 
 const { recipe, noCategories = false } = Astro.props;
+const href = `/recipe/${recipe.slug}`;
 ---
 
-<a href={`/recipe/${recipe.slug}`}>
+<a href={href}>
   <h3>{recipe.data.title}</h3>
   {recipe.data.description}
   {
@@ -22,6 +24,7 @@ const { recipe, noCategories = false } = Astro.props;
       </div>
     )
   }
+  <DownloadRecipe client:idle />
 </a>
 
 <style>
@@ -35,6 +38,7 @@ const { recipe, noCategories = false } = Astro.props;
     border-radius: 8px;
     margin: 0;
     padding: 16px;
+    width: 100%;
   }
 
   .categories {
