--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,7 +4,7 @@ import RegisterSW from "@/pwa/RegisterSW.astro";
 import WebManifestLink from "@/pwa/WebManifestLink.astro";
 import "@picocss/pico";
 import packageJson from "package.json";
-import { ViewTransitions } from "astro:transitions";
+// import { ViewTransitions } from "astro:transitions";
 
 interface Props {
   title?: string;
@@ -34,7 +34,7 @@ const { description = packageJson.description } = Astro.props;
     <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF" />
     <link rel="apple-touch-icon" href="/pwa-192x192.png" />
     <WebManifestLink />
-    <ViewTransitions />
+    <!-- <ViewTransitions /> -->
   </head>
   <body>
     <Nav />
